<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/card_layout_margin_bottom"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_layout_margin"
            android:textSize="@dimen/tv_other_size"
            android:textStyle="bold"
            android:text="@string/synopsis" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/tv_layout_margin"
            android:textSize="@dimen/tv_synopsis_size"
            android:layout_below="@id/tv_synopsis_title"
            android:id="@+id/tv_synopsis"/>

        <TextView
            android:id="@+id/tv_release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_synopsis"
            android:layout_margin="@dimen/tv_layout_margin"
            android:text="@string/release_date"
            android:textSize="@dimen/tv_other_size"
            android:textStyle="bold" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/tv_other_size"
            android:layout_margin="@dimen/tv_layout_margin"
            android:layout_below="@id/tv_release_date_title"
            android:id="@+id/tv_release_date"/>

        <TextView
            android:id="@+id/tv_rating_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_release_date"
            android:layout_margin="@dimen/tv_layout_margin"
            android:text="@string/rating"
            android:textSize="@dimen/tv_other_size"
            android:textStyle="bold" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/tv_layout_margin"
            android:textSize="@dimen/tv_other_size"
            android:layout_below="@id/tv_rating_title"
            android:id="@+id/tv_rating"/>

    </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>